tests/cases/memory/errors/zone-new-type-args.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::new<i64, bool>(ref mut zone, 1);
  zone::destroy(zone);
  return 0;
}
